fixed paging for newer Spring
